z-index off-canvas fixes for ie10

--- a/src/styles/objects.off-canvas.css
+++ b/src/styles/objects.off-canvas.css
@@ -2,8 +2,13 @@
 	pointer-events: none;
 }
 
+.off-canvas--animatable {
+	z-index: 1;
+}
+
 .off-canvas--visible {
 	pointer-events: auto;
+	z-index: 1;
 }
 
 .off-canvas::before {
